# BinGO

./: .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  DESKTOP_RELEASE.md  Dockerfile  README-zh.md  README.md  SECURITY.md  chinese-xinhua-jin-entry.json  docker-compose.yml  eslint.config.mjs  latest.json  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  proxy.ts  tsconfig.json  启动Bingo-无终端.vbs
.github/: pull_request_template.md
app/: globals.css  layout.tsx  page.tsx
components/: desktop-runtime-gate.tsx  desktop-secret-bootstrap.tsx  desktop-updater.tsx  header.tsx  language-switcher.tsx  local-seed-bootstrap.tsx  stage.tsx
desktop-loader/: index.html  loader.css  loader.js
lib/: telemetry.ts
reports/: bingo_mechanism_report.html
scripts/: bingo-runtime-paths.ps1  chinese-xinhua-embedding-wsl-server.ps1  chinese_xinhua_embedding_server.py  configure-desktop-release.mjs  cosyvoice-local-server.cmd  cosyvoice-local-server.ps1  download-jyeoo-report.mjs  export-local-backup-with-profile.mjs  generate-optional-data-assets.mjs  generate-prompt-manifest.mjs  generate-sbom.mjs  icc-screenshots.mjs  install-wsl-rocm-admin.ps1  jyeoo-click-download.mjs  launch-install-wsl-rocm-admin.vbs  local-model-wsl-rocm-server.ps1  mineru-local-server.cmd  (+17 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsi
src-tauri/permissions/: desktop-system-proxy.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/windows/: installer-hooks.nsh  installer-template.nsi
(+362 files in other folders)
