[package]
name = "bingo"
version = "0.2.0"
description = "BinGO AI interactive classroom desktop client"
authors = ["BinGO contributors"]
license = "AGPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bingo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
getrandom = "0.3"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2.5.8"
tauri-plugin-fs = "2.5.0"
tauri-plugin-shell = "2.3.5"
tauri-plugin-process = "2"
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
tauri-plugin-single-instance = "2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Networking_WinHttp", "Win32_Security_Credentials", "Win32_System_JobObjects", "Win32_System_Threading"] }
